--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,11 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
